<resources>
    <string name="app_name">7N</string>
    <string name="cancel">Annuler</string>
    <string name="picker_source_title">Choisir une source</string>
    <string name="picker_source_gallery">Galerie</string>
    <string name="picker_source_camera">Appareil photo</string>
    <string name="error_network">Erreur réseau. Veuillez réessayer</string>
    <string name="error_global">Erreur réseau. Veuillez réessayer</string>
    <string name="error_unauthorized">Session expirée. Veuillez vous reconnecter</string>
    <string name="error_login_failed">Indentifiants incorrect</string>
    <string name="error_login_unauthorized">Vérifier votre email</string>
    <string name="error_signup_failed">Email ou nom d\'utilisateur déjà pris</string>
    <string name="success_login">Connexion réussie !</string>
    <string name="btn_login">Se connecter</string>
    <string name="btn_register">S\'inscrire</string>
    <string name="profile_not_logged_in">Vous n\'êtes pas connecté</string>
    <string name="guest_login_required">Veuillez vous connecter</string>
    <string name="profile_self_badge">(moi)</string>
    <string name="success_followed">Abonnement créé</string>
    <string name="success_unfollowed">Désabonné</string>
    <string name="error_follow_action">Action impossible</string>
    <string name="post_viewer_title">Post de %1$s</string>
    <string name="tag_viewer_usage">%1$d utilisations</string>
    <string name="error_invalid_email">Veuillez entrer une adresse e-mail valide</string>
    <string name="error_invalid_password">Le mot de passe doit contenir au moins 6 caractères et un chiffre</string>
    <string name="error_field_required">Ce champ est obligatoire</string>
    <string name="error_invalid_username">Le nom d\'utilisateur doit faire entre 4 et 32 caractères</string>
    <string name="error_password_mismatch">Les mots de passe ne correspondent pas</string>
    <string name="success_register">Compte créé avec succès ! Veuillez vérifier votre email</string>
    <string name="edit_profile">Modifier votre profil</string>
    <string name="edit_profile_title">Modifier le profil</string>
    <string name="edit_profile_subtitle">Personnalisez votre carnet de voyage</string>
    <string name="label_username">NOM D\'UTILISATEUR <font color="#FF0000">*</font></string>
    <string name="label_email">EMAIL <font color="#FF0000">*</font></string>
    <string name="label_password">MOT DE PASSE <font color="#FF0000">*</font></string>
    <string name="label_confirm_password">CONFIRMER MOT DE PASSE <font color="#FF0000">*</font></string>
    <string name="btn_update_profile">Modifier</string>
    <string name="btn_delete_account">Supprimer mon compte</string>
    <string name="delete_account_confirm_title">Supprimer votre compte ?</string>
    <string name="delete_account_confirm_message">Cette action est irréversible. Toutes vos données seront définitivement supprimées</string>
    <string name="success_profile_update">Profil mis à jour !</string>
    <string name="error_profile_update">Erreur lors de la mise à jour</string>
    <string name="profile_member_since">Membre depuis le</string>
    <string name="logout">Se déconnecter</string>
    <string name="profile_logout">Déconnexion</string>
    <string name="profile_update_already_taken">Email ou nom d\'utilisateur déjà pris</string>
    <string name="profile_stat_posts">POSTS</string>
    <string name="profile_stat_groups">GROUPES</string>
    <string name="profile_stat_followers">ABONNÉS</string>
    <string name="profile_stat_following">ABONNEMENTS</string>
    <string name="create_post_title">Créer un post</string>
    <string name="create_post_subtitle">Partagez votre aventure</string>
    <string name="label_post_title">TITRE <font color="#FF0000">*</font></string>
    <string name="label_post_location">LOCALISATION <font color="#FF0000">*</font></string>
    <string name="label_post_description">DESCRIPTION</string>
    <string name="label_post_tags">TAGS (séparés par des virgules, pas d\'espaces, uniquement -,_)</string>
    <string name="label_post_group">GROUPE</string>
    <string name="label_post_price">PRIX</string>
    <string name="label_post_duration">DURÉE</string>
    <string name="price_free">Gratuit</string>
    <string name="price_range_format">%1$d-%2$d€</string>
    <string name="duration_minutes_format">%1$d-%2$d min</string>
    <string name="duration_hours_format">%1$dh-%2$dh</string>
    <string name="picker_unspecified">Non spécifié</string>
    <string name="group_selector_none">Aucun</string>
    <string name="error_load_groups">Impossible de charger vos groupes</string>
    <string name="post_type_panorama">Panorama</string>
    <string name="post_type_historic_site">Site historique</string>
    <string name="post_type_natural_area">Nature</string>
    <string name="post_type_coastal_water">Plages</string>
    <string name="post_type_urban_architecture">Architecture</string>
    <string name="post_type_gastronomy">Gastronomie</string>
    <string name="post_type_unique_stay">Séjour insolite</string>
    <string name="post_type_art_culture">Art &amp; culture</string>
    <string name="post_type_nightlife">Vie nocturne</string>
    <string name="post_type_hidden_gem">Joyau caché</string>
    <string name="post_type_other">Autre</string>
    <string name="groups_title">GROUPES</string>
    <string name="groups_search_hint">Rechercher un groupe...</string>
    <string name="groups_empty">Vous n\'avez rejoint aucun groupe</string>
    <string name="groups_search_empty">Aucun résultat</string>
    <string name="groups_popular_label">Groupes populaires</string>
    <string name="groups_my_label">Vos groupes</string>
    <string name="groups_tab_search">Recherche</string>
    <string name="search_title">RECHERCHE</string>
    <string name="search_filters_toggle">Filtres avancés</string>
    <string name="search_q_hint">Titre, description, utilisateur, groupe...</string>
    <string name="search_tag_hint">Tag</string>
    <string name="search_type_hint">Type</string>
    <string name="search_type_all">Tous</string>
    <string name="search_loc_hint">Lieu</string>
    <string name="search_dist_hint">Distance</string>
    <string name="search_dist_any">Toutes</string>
    <string name="search_around_me">Autour de moi</string>
    <string name="btn_search_action">Rechercher</string>
    <string name="error_location_unavailable">Localisation indisponible</string>
    <string name="search_empty">Aucun résultat</string>
    <string name="notification_title">NOTIFICATIONS</string>
    <string name="notification_empty">Aucune notification</string>
    <string name="notif_user_post">%1$s a publié un nouveau post</string>
    <string name="notif_post_liked">%1$s a aimé votre publication</string>
    <string name="notif_post_liked_anon">Un anonyme a aimé votre publication</string>
    <string name="notif_following_title">ABONNEMENTS</string>
    <string name="notif_following_groups">GROUPES</string>
    <string name="notif_following_users">UTILISATEURS</string>
    <string name="notif_following_empty_groups">Aucun groupe suivi</string>
    <string name="notif_following_empty_users">Aucun utilisateur suivi</string>
    <string name="notif_following_tags">TAGS</string>
    <string name="notif_following_empty_tags">Aucun tag suivi</string>
    <string name="notif_following_localisations">LOCALISATIONS</string>
    <string name="notif_following_empty_localisations">Aucune localisation suivie</string>
    <string name="notif_localisation_post">Nouveau post à %1$s</string>
    <string name="notif_following_unfollow">Se désabonner</string>
    <string name="notif_group_post">Nouveau post dans %1$s</string>
    <string name="notif_tag_post">Nouveau post avec #%1$s</string>
    <string name="groups_join">Rejoindre</string>
    <string name="success_join_request">Groupe rejoint</string>
    <string name="ask_join_request">Demande d\'adhésion envoyée</string>
    <string name="error_join_group_banned">Vous êtes bannis de ce groupe</string>
    <string name="error_join_group">Impossible de rejoindre le groupe</string>
    <string name="groups_members_count">%1$d membres</string>
    <string name="groups_posts_count">%1$d posts</string>
    <string name="groups_created_on">Créé le %1$s</string>
    <string name="groups_private_badge">Privé</string>
    <string name="groups_admin_badge">Admin</string>
    <string name="groups_tab_info">Groupe</string>
    <string name="groups_tab_posts">Voir les posts</string>
    <string name="groups_view_members">Voir les membres</string>
    <string name="groups_members_title">Membres du groupe</string>
    <string name="groups_members_empty">Aucun membre</string>
    <string name="groups_admin_banned_btn">Membres bannis</string>
    <string name="groups_admin_requests_btn">Demandes d\'adhésion</string>
    <string name="groups_admin_ban">Bannir</string>
    <string name="groups_admin_transfer">Transférer l\'admin</string>
    <string name="groups_admin_deban">Débannir</string>
    <string name="groups_admin_accept">Accepter</string>
    <string name="groups_admin_refuse">Refuser</string>
    <string name="groups_banned_title">Membres bannis</string>
    <string name="groups_requests_title">Demandes d\'adhésion</string>
    <string name="groups_banned_empty">Aucun membre banni</string>
    <string name="groups_requests_empty">Aucune demande en attente</string>
    <string name="success_member_banned">Membre banni</string>
    <string name="success_member_debanned">Membre débanni</string>
    <string name="success_admin_transferred">Rôle admin transféré</string>
    <string name="success_request_accepted">Demande acceptée</string>
    <string name="success_request_refused">Demande refusée</string>
    <string name="error_generic_action">L\'action a échoué</string>
    <string name="groups_admin_edit_btn">Modifier le groupe</string>
    <string name="groups_admin_delete_btn">Supprimer le groupe</string>
    <string name="groups_delete_confirm_title">Supprimer le groupe ?</string>
    <string name="groups_delete_confirm_message">Cette action est irréversible.</string>
    <string name="groups_admin_fail_delete_group">Vous devez supprimer tous les posts du groupe avant de le supprimer</string>
    <string name="groups_admin_fail_update_name">Ce nom de group existe déjà</string>
    <string name="groups_edit_title">Modifier le groupe</string>
    <string name="groups_edit_subtitle">Mettez à jour les infos du groupe.</string>
    <string name="label_group_name">NOM <font color="#FF0000">*</font></string>
    <string name="label_group_description">DESCRIPTION</string>
    <string name="label_group_private">Groupe privé</string>
    <string name="success_group_updated">Groupe mis à jour !</string>
    <string name="error_group_update">Erreur lors de la mise à jour</string>
    <string name="success_group_deleted">Groupe supprimé</string>
    <string name="groups_quit_btn">Quitter le groupe</string>
    <string name="groups_quit_confirm_title">Quitter le groupe ?</string>
    <string name="groups_quit_confirm_message">Vous ne ferez plus partie de ce groupe</string>
    <string name="group_no_posts">Pas de posts pour le moment</string>
    <string name="success_group_quit">Vous avez quitté le groupe</string>
    <string name="success_group_avatar">Photo du groupe mise à jour !</string>
    <string name="error_group_avatar">Erreur lors de l\'envoi de la photo</string>
    <string name="create_group_title">Créer un groupe</string>
    <string name="sessions_title">Sessions actives</string>
    <string name="sessions_subtitle">Appareils actuellement connectés à votre compte</string>
    <string name="sessions_empty">Aucune session active</string>
    <string name="research">RECHERCHE</string>
    <string name="groups">GROUPES</string>
    <string name="menu">MENU</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="profile">PROFIL</string>
</resources>