<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/research" />
    <item
        android:id="@+id/nav_groups"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/groups" />
    <item
        android:id="@+id/nav_menu"
        android:icon="@drawable/ic_home"
        android:title="@string/menu" />
    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_bell"
        android:title="@string/notifications" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/profile" />
</menu>